src/test/deca/syntax/valid/parser/oracle/class_with_fields_and_method.deca
class Q{
	flaot f(int x) asm("Hello 
 World !");
	int x;
	protected float f;
}