src/test/deca/syntax/invalid/parser/oracle/method_asm_ident2.deca
class A { a a () asm (0digit); }